# gesetze-online-corpus

./: .COMMIT_MSG.tmp  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-snapshot.yml  debug-connectivity.yml  scheduled-bund.yml  scheduled-eu.yml  scheduled-rechtsprechung.yml  scheduled-vwv.yml  update-corpus.yml
chunks/: example-law.jsonl
docs/: ARCHITECTURE.md  CANONICAL.md  KNOWLEDGE_GRAPH.md  ROADMAP.md  SCHEMA.md
gesetze_corpus/: __init__.py  cli.py  http.py
gesetze_corpus/canonical/: __init__.py  text.py  xml_.py
gesetze_corpus/events/: __init__.py  commit.py  detect.py  schema.py  writer.py
gesetze_corpus/fetch/: __init__.py  assets.py  toc.py
gesetze_corpus/fetchers/: __init__.py  _base.py  bund.py
gesetze_corpus/fetchers/eu/: __init__.py  client.py  detail.py  listing.py  writer.py
gesetze_corpus/fetchers/land/: __init__.py  _template.py  bw.py  by.py  nw.py
gesetze_corpus/fetchers/rechtsprechung/: __init__.py  download.py  listing.py  parse.py  render.py  writer.py
gesetze_corpus/fetchers/vwv/: __init__.py  detail.py  listing.py  writer.py
gesetze_corpus/ingest/: __init__.py  export.py  rerender.py  snapshot.py
gesetze_corpus/parse/: __init__.py  xml_parser.py
gesetze_corpus/render/: __init__.py  meta_json.py  paragraph_md.py
gesetze_corpus/sources/: __init__.py  neuris.py
gesetze_corpus/util/: gitcommit.py  paths.py  slugs.py
markdown/: example-law.md
normalized/: example-law.json
scripts/: run_pipeline.sh  sync-local.ps1
scripts/export/: generate_chunks.py  generate_markdown.py
scripts/fetch/: fetch_http.py  fetch_law_assets.py  fetch_toc.py  rss_updates.py
scripts/parse/: normalize_from_raw.py  normalize_law.py
tests/: test_canonical_text.py  test_canonical_xml.py  test_chunk_shape.py  test_eu.py  test_events_detect.py  test_gitcommit.py  test_idempotency.py  test_parser_fixture.py  test_rechtsprechung.py  test_renderer.py  test_slugs.py  test_vwv.py  test_xml_parser.py
